<Fix> Fixed .env file

--- a/recipes-suggester/src/main/resources/application.properties
+++ b/recipes-suggester/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8080
 
 # MongoDB configuration
-spring.data.mongodb.uri=mongodb+srv://danielshapira3:C5UVYyTX221NiUsz@users-info.n9csxyy.mongodb.net/Users-Info
+spring.data.mongodb.uri=${MONGODB_URI}
 
 # AWS S3 configuration
 aws.s3.bucketName=imagerecipeanalysis
