--- a/recipes-suggester/src/main/resources/application.properties
+++ b/recipes-suggester/src/main/resources/application.properties
@@ -2,10 +2,13 @@
 server.port=8080
 
 # MongoDB configuration
-spring.data.mongodb.uri=${MONGODB_URI}
+spring.data.mongodb.uri=mongodb+srv://danielshapira3:C5UVYyTX221NiUsz@users-info.n9csxyy.mongodb.net/Users-Info
 
 # AWS S3 configuration
 aws.s3.bucketName=imagerecipeanalysis
 aws.s3.region=eu-central-1
 
 spring.jackson.serialization.indent-output=true
+
+frontend.uri=http://localhost:3000
+
