--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,13 @@ version: '3.7'
 services:
   backend:
     build:
-      context: ./recipes-suggester
+      context: ./backend
     ports:
       - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=prod
+    env_file:
+      - .env
 
   frontend:
     build:
