--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,21 @@ services:
       - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=prod
-    env_file:
-      - .env
+      - OPENAI_KEY=${OPENAI_KEY}
+      - AWS_ACCESS_KEY=${AWS_ACCESS_KEY}
+      - AWS_SECRET_KEY=${AWS_SECRET_KEY}
+      - MONGO_URI=${MONGO_URI}
+    networks:
+      - my-network
 
   frontend:
     build:
       context: ./frontend
     ports:
       - "3000:3000"
+    networks:
+      - my-network
+
+networks:
+  my-network:
+    driver: bridge
